add animation and hover sections , blocks

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -42,9 +42,9 @@
     </div>
     <div class="footer__bottom">
       <p class="footer__bottom-left">Asia Union Airlines © 2023</p>
-      <div class="footer__bottom-right">
+      <a class="footer__bottom-right">
         <img src="./img/icons/alex-logo.svg" alt="" />
-      </div>
+      </a>
     </div>
   </div>
   <div class="footer__plane">
