--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -1,11 +1,11 @@
 .banner {
-  height: 650px;
+  height: calc(100vh - var(--hh));
   position: relative;
   margin-top: 0;
   &__content {
     position: absolute;
     width: 100%;
-    height: 650px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -17,8 +17,24 @@
       top: 0;
       left: 0;
       z-index: -1;
+      overflow: hidden;
       img {
+        height: 100%;
         object-fit: cover;
+        transform-origin: left top;
+        animation: img-banner-move 50s linear infinite;
+      }
+      @keyframes img-banner-move {
+        0% {
+          transform: scale(1);
+        }
+
+        50% {
+          transform: scale(1.2);
+        }
+        100% {
+          transform: scale(1);
+        }
       }
     }
   }
