--- a/src/scss/components/router.scss
+++ b/src/scss/components/router.scss
@@ -14,6 +14,12 @@
     font-weight: 600;
     color: #868686;
   }
+  a {
+    transition: 0.5s ease;
+    &:hover {
+      color: #621dab;
+    }
+  }
   p {
     font-weight: 700;
     color: #170826;
