--- a/src/scss/pages/animal/transport-animal.scss
+++ b/src/scss/pages/animal/transport-animal.scss
@@ -18,6 +18,10 @@
       border-radius: 20px;
       overflow: hidden;
       flex-shrink: 0;
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
     &__text {
       font-weight: 400;
@@ -33,7 +37,7 @@
       display: none;
       align-items: center;
       gap: 90px;
-      &.active{
+      &.active {
         display: flex;
       }
       &-left {
