--- a/src/scss/pages/contacts/contacts.scss
+++ b/src/scss/pages/contacts/contacts.scss
@@ -59,10 +59,11 @@
         gap: 15px;
         align-items: center;
         width: 100%;
-        svg{
+        svg {
           flex-shrink: 0;
+          pointer-events: none;
         }
-        input{
+        input {
           width: 100%;
         }
       }
@@ -94,6 +95,19 @@
         border-radius: 40px;
         display: block;
         width: max-content;
+        transition: 0.2s ease;
+        &:hover {
+          background: #6f2db5;
+        }
+      }
+      .contacts__form-phone,
+      .contacts__form-mail,
+      textarea {
+        border: 1px solid transparent;
+        transition: 0.3s ease;
+        &:hover {
+          border: 1px solid #d8a94e;
+        }
       }
     }
     &__right {
@@ -106,6 +120,14 @@
         display: flex;
         gap: 20px;
         align-items: center;
+        &:hover {
+          .contacts__right-img {
+            background: #d8a94e;
+          }
+          .contacts__right-wrap p {
+            color: #6f2db5;
+          }
+        }
       }
       &-img {
         width: 65px;
@@ -116,6 +138,7 @@
         justify-content: center;
         background: #6f2db5;
         flex-shrink: 0;
+        transition: 0.3s ease;
       }
       &-wrap {
         display: flex;
@@ -126,6 +149,7 @@
         p {
           font-weight: 700;
           font-size: 21px;
+          transition: 0.3s ease;
         }
         span {
           font-weight: 400;
