--- a/src/scss/pages/fleet-inner/info.scss
+++ b/src/scss/pages/fleet-inner/info.scss
@@ -12,6 +12,9 @@
         margin-top: 10px;
       }
     }
+    &__tab {
+      position: relative;
+    }
     &__wrapper {
       // display: flex;
       display: none;
@@ -25,6 +28,13 @@
       &[data-tab-content="inside"] {
         height: 875px;
         background: #f6f6f6;
+        &.active ~ .info__ghost {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+      &-img {
+        transform: translate(-100%, 0);
       }
       &-svg {
         position: absolute;
@@ -32,19 +42,18 @@
         transform: translate(0, -50%);
         right: 103px;
       }
+    }
+    &__ghost {
+      position: absolute;
+      top: 0;
+      left: 0;
+      opacity: 0;
+      visibility: hidden;
       .tooltip {
         position: absolute;
         top: 0;
         left: 0;
-        width: 160px;
-        height: auto;
-        background: #fff;
-        border-radius: 15px;
         padding-bottom: 30px;
-        overflow: hidden;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
         opacity: 0;
         visibility: hidden;
         transition: 0.2s ease;
@@ -52,12 +61,29 @@
           opacity: 1;
           visibility: visible;
         }
+        &__wrap {
+          overflow: hidden;
+          padding-bottom: 30px;
+          width: 160px;
+          height: auto;
+          background: #fff;
+          border-radius: 15px;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          svg {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(180deg);
+          }
+        }
         &__img {
           img {
             display: none;
             width: 100%;
-            height: 50%;
             object-fit: cover;
+            aspect-ratio: 16/9;
             &.active {
               display: block;
             }
