--- a/src/scss/pages/news/news.scss
+++ b/src/scss/pages/news/news.scss
@@ -31,12 +31,21 @@
       gap: 30px;
       margin-top: 25px;
       overflow: hidden;
+
       &.show {
         grid-template-rows: 430px 320px 320px 320px;
       }
       &-item {
         display: flex;
         flex-direction: column;
+        &:hover {
+          img {
+            scale: 1.2;
+          }
+          &:not(:nth-child(1)) .news__grid-desc {
+            color: #612dab;
+          }
+        }
         &:nth-child(1) {
           grid-area: 1 / 1 / 2 / 3;
         }
@@ -80,6 +89,7 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
+          transition: 0.5s ease;
         }
       }
       &-date {
@@ -93,6 +103,7 @@
         font-size: 16px;
         color: #222;
         margin-top: 15px;
+        transition: 0.3s ease;
       }
       &-main {
         position: relative;
@@ -107,7 +118,7 @@
           left: 0;
           width: 100%;
           height: 250px;
-          background: linear-gradient(180deg, rgba(2, 2, 2, 0) 7.23%, rgba(41, 41, 41, .72) 100.94%);
+          background: linear-gradient(180deg, rgba(2, 2, 2, 0) 7.23%, rgba(41, 41, 41, 0.72) 100.94%);
         }
         &-img {
           position: absolute;
