--- a/src/scss/pages/service/fly.scss
+++ b/src/scss/pages/service/fly.scss
@@ -11,6 +11,11 @@
       flex-wrap: wrap;
       background: #f9f8fa;
       padding-bottom: 25px;
+      &:hover {
+        img {
+          scale: 1.2;
+        }
+      }
     }
     &__img {
       width: 100%;
@@ -20,6 +25,7 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        transition: 0.5s ease;
       }
     }
     &__heading {
@@ -38,6 +44,11 @@
       color: #612dab;
       padding: 0 30px;
       display: block;
+      transition: 0.3s ease;
+      &:hover {
+        color: rgba(216, 169, 78, 1);
+        text-decoration: none;
+      }
     }
   }
 }
