--- a/src/scss/sections/comfort.scss
+++ b/src/scss/sections/comfort.scss
@@ -1,9 +1,10 @@
 .main#main {
   .comfort {
     width: 100%;
-    height: 500vh;
+    height: 300vh;
     background: #621dab;
     padding-bottom: 200px;
+    outline: 1px solid green;
     &__inner {
       display: flex;
       align-items: center;
