--- a/src/scss/sections/intro.scss
+++ b/src/scss/sections/intro.scss
@@ -112,6 +112,10 @@
         font-size: 16px;
         text-align: center;
         color: #fff;
+        transition: 0.2s ease;
+        &:hover {
+          background: #6f2db5;
+        }
       }
       &-right {
         max-width: 680px;
