add mobile adaptive

--- a/src/html/components/banner.html
+++ b/src/html/components/banner.html
@@ -4,7 +4,7 @@
       <img src="@@img" alt="" />
     </div>
     <div class="banner__bottom">
-      <div class="banner__bottom-block container">
+      <div class="banner__bottom-block">
         <div class="banner__bottom-heading">@@title</div>
         <p class="banner__bottom-text">@@text</p>
         <p class="banner__bottom-text"></p>
