--- a/src/scss/base/var.scss
+++ b/src/scss/base/var.scss
@@ -1,6 +1,9 @@
 :root {
   --vh: 100lvh;
-
+  --pt-plane: -10vw;
+  --container: 1420px;
+  --pd: 30px;
+  --container-padding: 1480px;
   // Font Family
   --font-family: "Montserrat", sans-serif;
 
