--- a/src/scss/pages/animal/transport-type.scss
+++ b/src/scss/pages/animal/transport-type.scss
@@ -40,4 +40,24 @@
       }
     }
   }
+  @media (max-width: 1365px) {
+    .transport-type {
+      &__wrapper {
+        flex-direction: column;
+      }
+      &__wrap {
+        width: 100%;
+      }
+    }
+  }
+  @media (max-width: 600px) {
+    .transport-type {
+      &__wrap {
+        &-heading {
+          font-size: 16px;
+          text-wrap: auto;
+        }
+      }
+    }
+  }
 }
