--- a/src/scss/pages/tarif-inner/tarif.scss
+++ b/src/scss/pages/tarif-inner/tarif.scss
@@ -53,4 +53,11 @@
       }
     }
   }
+  @media (max-width: 1080px) {
+    .tarif {
+      &__wrapper {
+        flex-direction: column;
+      }
+    }
+  }
 }
