--- a/src/scss/base/reset.scss
+++ b/src/scss/base/reset.scss
@@ -70,12 +70,12 @@ ul li {
 
 img {
   vertical-align: top;
-  user-drag: none;
-  -webkit-user-drag: none;
-  user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
+  // user-drag: none;
+  // -webkit-user-drag: none;
+  // user-select: none;
+  // -moz-user-select: none;
+  // -webkit-user-select: none;
+  // -ms-user-select: none;
   touch-action: none;
 }
 
