--- a/src/scss/components/banner.scss
+++ b/src/scss/components/banner.scss
@@ -41,15 +41,16 @@
   &__bottom {
     height: fit-content;
     position: relative;
-    padding: 80px 0;
+    padding: 80px 160px 80px calc((100% - var(--container)) / 2);
     margin-top: auto;
+    max-width: 60vw;
+    width: 100%;
     &::before {
       position: absolute;
       z-index: -1;
       top: 0;
-      left: -6vw;
-      width: 52vw;
-      max-width: 1000px;
+      left: -80px;
+      width: 100%;
       height: 100%;
       content: "";
       background: rgba(98, 29, 171, 0.9);
@@ -68,10 +69,38 @@
       font-size: 18px;
       line-height: 150%;
       color: #fff;
-      max-width: 560px;
+      max-width: 100%;
       width: 100%;
       &:first-of-type {
         margin-top: 35px;
+      }
+    }
+  }
+}
+@media (max-width: 1480px) {
+  .banner {
+    &__bottom {
+      padding-left: 30px;
+    }
+  }
+}
+@media (max-width: 1279px) {
+  .banner {
+    &__bottom {
+      max-width: 75vw;
+    }
+  }
+}
+@media (max-width: 768px) {
+  .banner {
+    &__bottom {
+      max-width: 100vw;
+      padding-right: 30px;
+      &::before {
+        transform: none;
+        border-radius: 0;
+        width: 100%;
+        left: 0;
       }
     }
   }
