--- a/src/scss/components/food.scss
+++ b/src/scss/components/food.scss
@@ -68,3 +68,20 @@
     }
   }
 }
+
+@media (max-width: 992px) {
+  .food{
+    &__class{
+      flex-direction: column;
+      &-wrap{
+        flex-direction: column;
+      }
+      &-flex{
+        width: 100%;
+      }
+      &-heading{
+        font-size: 16px;
+      }
+    }
+  }
+}
