--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -205,24 +205,18 @@
         display: flex;
         align-items: center;
         gap: 5px;
-        // transition: 0.5s ease 0.5s;
         transition: 0.5s ease;
         svg {
-          // transition: 0.5s ease 0.5s;
           transition: 0.5s ease;
           path {
-            // transition: 0.5s ease 0.5s;
             transition: 0.5s ease;
           }
         }
         &.active {
-          // transition: 0.5s ease;
           color: #6f2db5;
           svg {
-            // transition: 0.5s ease;
             rotate: 180deg;
             path {
-              // transition: 0.5s ease;
               fill: #6f2db5;
             }
           }
@@ -244,12 +238,10 @@
       font-size: 14px;
     }
     &-num {
-      // transition: 0.5s ease 0.5s;
       transition: 0.5s ease;
     }
     svg path {
       transition: 0.5s ease;
-      // transition: fill 0.5s ease 0.5s;
     }
   }
   &__search {
@@ -258,7 +250,6 @@
     position: relative;
     z-index: 2;
     svg path {
-      // transition: fill 0.5s ease 0.5s;
       transition: 0.5s ease;
     }
     &:hover {
@@ -306,7 +297,6 @@
       font-weight: 700;
       font-size: 12px;
       color: #6f2db5;
-      // transition: 0.5s ease 0.5s;
       transition: 0.5s ease;
     }
     &:hover {
@@ -325,11 +315,28 @@
       visibility: hidden;
       transition: 0.5s ease;
       padding-top: 20px;
-      &-svg {
+      &::before {
+        content: "";
         position: absolute;
-        top: 0;
-        left: 18px;
-        transform: translate(0, calc(-62.5% + 20px));
+        top: 20px;
+        left: 0;
+        width: 100%;
+        height: calc(100% - 20px);
+        box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        z-index: -2;
+      }
+      &::after {
+        background: #fff;
+        content: "";
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        width: 20px;
+        height: 20px;
+        transform: translateY(-50%) rotate(-45deg);
+        z-index: -1;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
       }
       &-items {
         display: flex;
@@ -350,6 +357,29 @@
           background: #f2f2f2;
         }
       }
+    }
+  }
+}
+
+@media (max-width: 1480px) {
+  .header {
+    &__search {
+      &-input {
+        max-width: calc(100% - var(--pd) * 2);
+      }
+    }
+  }
+}
+@media (max-width: 1279px) {
+  .header {
+    &__nav {
+      display: none;
+    }
+    &__phone {
+      display: none;
+    }
+    &__search {
+      display: none;
     }
   }
 }
