--- a/src/scss/components/mainFlot.scss
+++ b/src/scss/components/mainFlot.scss
@@ -16,7 +16,6 @@
   &__item {
     max-width: calc((100% - 30px) / 2);
     width: 100%;
-    height: 300px;
     padding: 25px;
     border-radius: 25px;
     background: #f6f6f6;
@@ -26,6 +25,7 @@
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    gap: 30px;
     &:hover {
       &::before {
         transform: translate(-50%, 0%) scale(60);
@@ -63,5 +63,18 @@
     justify-content: center;
     position: relative;
     z-index: 2;
+    max-width: 100%;
+    width: 100%;
+    img {
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .mainFlot {
+    &__item {
+      max-width: 100%;
+    }
   }
 }
