--- a/src/scss/pages/animal/transport-animal.scss
+++ b/src/scss/pages/animal/transport-animal.scss
@@ -48,6 +48,9 @@
         width: 510px;
         height: 100%;
         flex-shrink: 0;
+        img {
+          width: 100%;
+        }
       }
       &-heading {
         font-weight: 600;
@@ -62,6 +65,41 @@
         margin-top: 40px;
         &:not(:first-of-type) {
           margin-top: 15px;
+        }
+      }
+    }
+  }
+  @media (max-width: 1366px) {
+    .transport-animal {
+      &__wrapper {
+        height: auto;
+      }
+      &__wrap {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+    }
+  }
+  @media (max-width: 1200px) {
+    .transport-animal {
+      &__block {
+        flex-direction: column;
+      }
+    }
+  }
+  @media (max-width: 600px) {
+    .transport-animal {
+      &__img {
+        max-width: 100%;
+        img {
+          object-fit: cover;
+        }
+      }
+      &__wrap {
+        gap: 30px;
+        &-right {
+          max-width: 100%;
+          width: 100%;
         }
       }
     }
