--- a/src/scss/pages/food/special.scss
+++ b/src/scss/pages/food/special.scss
@@ -43,4 +43,15 @@
       }
     }
   }
+  @media (max-width: 992px) {
+    .special {
+      &__card {
+        flex-direction: column;
+        &-item {
+          max-width: 100%;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
