--- a/src/scss/pages/news/news.scss
+++ b/src/scss/pages/news/news.scss
@@ -31,13 +31,13 @@
       gap: 30px;
       margin-top: 25px;
       overflow: hidden;
-
       &.show {
         grid-template-rows: 430px 320px 320px 320px;
       }
       &-item {
         display: flex;
         flex-direction: column;
+        overflow: hidden;
         &:hover {
           img {
             scale: 1.2;
@@ -141,6 +141,76 @@
           z-index: 3;
           max-width: 585px;
           width: 100%;
+        }
+      }
+    }
+  }
+
+  @media (max-width: 1200px) {
+    .news {
+      &__grid {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 430px 320px 320px 0 0 0;
+        &.show {
+          grid-template-rows: 430px 320px 320px 320px 320px 320px;
+        }
+        &-item {
+          &:nth-child(1) {
+            grid-area: 1 / 1 / 2 / 3;
+          }
+          &:nth-child(2) {
+            grid-area: 2 / 1 / 3 / 2;
+          }
+          &:nth-child(3) {
+            grid-area: 2 / 2 / 3 / 3;
+          }
+          &:nth-child(4) {
+            grid-area: 3 / 1 / 4 / 2;
+          }
+          &:nth-child(5) {
+            grid-area: 3 / 2 / 4 / 3;
+          }
+          &:nth-child(6) {
+            grid-area: 4 / 1 / 5 / 2;
+          }
+          &:nth-child(7) {
+            grid-area: 4 / 2 / 5 / 3;
+          }
+          &:nth-child(8) {
+            grid-area: 5 / 1 / 6 / 2;
+          }
+          &:nth-child(9) {
+            grid-area: 5 / 2 / 6 / 3;
+          }
+          &:nth-child(10) {
+            grid-area: 6 / 1 / 7 / 2;
+          }
+          &:nth-child(11) {
+            grid-area: 6 / 2 / 7 / 3;
+          }
+        }
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .news {
+      &__grid {
+        display: flex;
+        flex-direction: column;
+        &-main {
+          padding: 0;
+          &::before {
+            display: none;
+          }
+          &-img {
+            position: static;
+          }
+          &-desc {
+            color: #222;
+          }
+          &-date {
+            color: #612dab;
+          }
         }
       }
     }
