--- a/src/scss/pages/resume/resume.scss
+++ b/src/scss/pages/resume/resume.scss
@@ -21,6 +21,7 @@
       height: 50px;
       align-items: center;
       margin-top: 25px;
+      gap: 20px;
       &:first-of-type {
         margin-top: 30px;
       }
@@ -81,6 +82,38 @@
         font-weight: 600;
         font-size: 16px;
         color: #fff;
+      }
+    }
+  }
+  @media (max-width: 1200px) {
+    .resume {
+      &__wrap {
+        max-width: 100%;
+        input,
+        textarea {
+          max-width: 60%;
+          width: 100%;
+        }
+      }
+    }
+  }
+  @media (max-width: 900px) {
+    .resume {
+      &__wrap {
+        height: auto;
+        align-items: flex-start;
+        flex-direction: column;
+        label {
+          padding-left: 30px;
+          text-align: center;
+        }
+        input,
+        textarea {
+          max-width: 100%;
+        }
+      }
+      &__heading{
+        text-align: center;
       }
     }
   }
