--- a/src/scss/pages/service/bagagge.scss
+++ b/src/scss/pages/service/bagagge.scss
@@ -2,7 +2,6 @@
   .bagagge {
     &__inner {
       background: #6f2db5;
-
     }
     &__block {
       display: flex;
@@ -34,6 +33,25 @@
       position: absolute;
       top: -20%;
       right: -4%;
+      width: 620px;
+      img {
+        width: 100%;
+      }
+    }
+  }
+  @media (max-width: 1200px) {
+    .bagagge {
+      &__block{
+        align-items: center;
+      }
+      &__text{
+        max-width: 100%;
+      }
+      &__img {
+        position: relative;
+        max-width: 620px;
+        width: 100%;
+      }
     }
   }
 }
