--- a/src/scss/pages/vacancy/vacancy.scss
+++ b/src/scss/pages/vacancy/vacancy.scss
@@ -27,7 +27,8 @@
       gap: 30px;
       flex-wrap: wrap;
       &-item {
-        width: calc((100% - 60px) / 3);
+        max-width: calc((100% - 60px) / 3);
+        width: 100%;
         height: 400px;
         border-radius: 15px;
         background: #f6f6f6;
@@ -54,7 +55,7 @@
         }
         &:hover {
           &::before {
-            transform: translate(-50%, -50%) scale(12);
+            transform: translate(-50%, -50%) scale(20);
           }
           .vacancy__card-date,
           .vacancy__card-desc,
@@ -95,6 +96,24 @@
         transition: 0.5s ease;
         path {
           transition: 0.5s ease;
+        }
+      }
+    }
+  }
+  @media (max-width: 1200px) {
+    .vacancy {
+      &__card {
+        &-item {
+          max-width: calc((100% - 30px) / 2);
+        }
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .vacancy {
+      &__card {
+        &-item {
+          max-width: 100%;
         }
       }
     }
