--- a/src/scss/sections/feature.scss
+++ b/src/scss/sections/feature.scss
@@ -5,7 +5,9 @@
     display: flex;
     align-items: center;
     background: #621dab;
-    padding-top: 200px;
+    padding-top: 150px;
+    position: relative;
+    overflow: hidden;
     &__inner {
       position: relative;
       display: flex;
@@ -82,6 +84,83 @@
       height: 260px;
       border-radius: 50%;
       overflow: hidden;
+      pointer-events: none;
+    }
+  }
+  @media (max-width: 1366px) {
+    .feature {
+      &__left {
+        width: 33vw;
+        height: 33vw;
+        flex-shrink: 0;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+      &__mid {
+        width: 20vw;
+        height: 20vw;
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+      &__text {
+        max-width: 65%;
+      }
+    }
+  }
+  @media (max-width: 1100px) {
+    .feature {
+      &__inner {
+        height: auto;
+      }
+      &__block {
+        flex-direction: column-reverse;
+        height: auto;
+        overflow: visible;
+      }
+      &__text {
+        max-width: 100%;
+        text-align: center;
+      }
+      &__mid {
+        left: auto;
+        right: 0;
+      }
+    }
+  }
+  @media (max-width: 768px) {
+    .feature {
+      padding-bottom: 200px;
+      &__text {
+        margin-left: 0;
+        margin-top: 20px;
+        max-width: 100%;
+        text-align: center;
+      }
+      &__title {
+        text-align: center;
+      }
+      &__more {
+        margin-right: auto;
+      }
+      &__left {
+        img {
+          height: 100%;
+        }
+      }
+    }
+  }
+  @media (max-width: 500px) {
+    .feature {
+      &__block {
+        gap: 30px;
+      }
+      &__title {
+        font-size: 24px;
+      }
     }
   }
 }
