--- a/src/scss/sections/info.scss
+++ b/src/scss/sections/info.scss
@@ -40,6 +40,7 @@
         width: 100%;
         cursor: pointer;
         overflow: hidden;
+        position: relative;
         &:hover {
           .info__right {
             &-icon::before {
@@ -85,28 +86,45 @@
         font-size: 20px;
         color: #2b0d47;
       }
-    }
-    &__cloud {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translate(-42%, -77%);
-      width: 120%;
-      animation: cloud-move-top 25s linear infinite;
-      pointer-events: none;
-      img {
+      &-link {
+        position: absolute;
+        top: 0;
+        left: 0;
         width: 100%;
         height: 100%;
+        z-index: 3;
       }
-      @keyframes cloud-move-top {
-        0% {
-          transform: translate(-42%, -77%);
+    }
+  }
+  @media (max-width: 1279px) {
+    .info {
+      &__left {
+        &-heading {
+          font-size: 36px;
         }
-        50% {
-          transform: translate(-58%, -77%);
+      }
+      &__right{
+        &-card{
+          padding: 20px;
         }
-        100% {
-          transform: translate(-42%, -77%);
+      }
+    }
+  }
+  @media (max-width: 1100px) {
+    .info {
+      &__block {
+        flex-direction: column;
+        gap: 20px;
+        align-items: flex-start;
+      }
+      &__right {
+        flex-direction: column;
+        max-width: 100%;
+      }
+      &__left {
+        max-width: 100%;
+        &-heading {
+          font-size: 24px;
         }
       }
     }
