--- a/src/scss/sections/intro.scss
+++ b/src/scss/sections/intro.scss
@@ -1,17 +1,21 @@
 .main#main {
   .intro {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     margin-top: 0;
+    overflow: hidden;
     &__bg {
       width: 100%;
       height: 100%;
       overflow: hidden;
       position: absolute;
       top: 0;
-      left: 0;
+      left: 50%;
+      transform: translate(-50%, 0);
       img {
-        object-fit: contain;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     }
     &__inner {
@@ -31,7 +35,7 @@
       justify-content: space-between;
       background: #fff;
       padding-left: 80px;
-      margin-top: 75px;
+      margin-top: 7vh;
       border-radius: 30px;
       height: 530px;
       overflow: hidden;
@@ -118,11 +122,13 @@
         }
       }
       &-right {
+        // max-width: 48%;
         max-width: 680px;
         width: 100%;
         height: 100%;
         position: relative;
         overflow: hidden;
+        flex-shrink: 0;
         svg {
           position: absolute;
           top: 0;
@@ -135,6 +141,65 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
+        }
+      }
+    }
+  }
+  @media (max-width: 1279px) {
+    .intro {
+      &__block {
+        &-right {
+          max-width: 48%;
+        }
+      }
+    }
+  }
+  @media (max-width: 1100px) {
+    .intro {
+      &__title {
+        font-size: 46px;
+        padding-left: 0;
+        text-align: center;
+      }
+
+      &__block {
+        padding-left: 0;
+        height: auto;
+        &-left {
+          padding: 40px;
+        }
+        &-right {
+          display: none;
+        }
+        &-bottom {
+          padding-top: 40px;
+        }
+        &-navigation{
+          display: none;
+        }
+      }
+    }
+  }
+  @media (max-width: 500px) {
+    .intro {
+      display: flex;
+      align-items: center;
+      &__title {
+        font-size: 24px;
+      }
+      &__block {
+        margin-top: 20px;
+        &-left{
+          padding: 20px;
+          align-items: center;
+        }
+        &-heading {
+          font-size: 18px;
+          text-align: center;
+        }
+        &-text {
+          font-size: 16px;
+          text-align: center;
         }
       }
     }
