--- a/src/scss/sections/plane.scss
+++ b/src/scss/sections/plane.scss
@@ -1,18 +1,10 @@
 main#main {
   .plane {
-    width: 100%;
-    padding-bottom: 100px;
+    background: url("../img/cloud-02.png") 0 0 / contain #dcdfe469;
     position: relative;
-    background: #621dab;
-    &::before {
-      position: absolute;
-      content: "";
-      top: 0;
-      width: 100%;
-      height: 200px;
-      background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-      transform: translate(0, -100%);
-    }
+    min-height: 100vh;
+    width: 100%;
+    overflow: hidden;
     &__top {
       position: relative;
       height: 75vh;
@@ -25,35 +17,61 @@ main#main {
       margin-top: 80px;
       z-index: 2;
       position: relative;
+      background: url("../img/cloud-02.png") 0 0 / 100% auto #dcdfe469;
+      padding-bottom: calc(5 * 20px);
+      overflow: hidden;
+      padding-left: calc((100% - 1420px) / 2);
+      padding-right: calc((100% - 1420px) / 2);
+      &-cloud {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+      }
     }
     &__sticky {
       position: sticky;
-      // top: 0;
       top: 50%;
       transform: translate(0, -50%);
       height: fit-content;
-      // outline: 1px solid green;
       pointer-events: none;
+      width: 100%;
+      z-index: 3;
+      display: flex;
+      justify-content: center;
     }
     &__img {
       scale: 0;
       opacity: 0;
       visibility: hidden;
+      padding: 0 30px;
+      max-width: 67%;
+      width: 100%;
+      img {
+        width: 100%;
+      }
     }
     &__title {
       font-weight: 700;
       font-size: 50px;
       color: #2b0d47;
       text-align: center;
+      position: relative;
+      z-index: 3;
     }
     &__card {
       margin-top: 65px;
       display: flex;
       gap: 30px;
+      position: relative;
+      z-index: 3;
       &-item {
         width: 100%;
         padding: 35px 35px 45px;
         background: #fff;
+        box-shadow: 0 0 8px 0 rgba(34, 60, 80, 0.1);
         border-radius: 20px;
         display: flex;
         flex-direction: column;
@@ -150,62 +168,29 @@ main#main {
       }
     }
     &__cloud {
+      background: url("../img/cloud-02.png") 0 5vw / contain;
       position: absolute;
       top: 0;
-      left: 50%;
-      transform: translate(-50%, -15%);
-      pointer-events: none;
-      img {
-        // width: 100%;
-        // height: 100%;
+      left: 0;
+      min-height: 100vh;
+      width: 100%;
+    }
+  }
+  @media (max-width: 1480px) {
+    .plane {
+      &__inner {
+        padding: 0 30px;
       }
     }
-    .cloud-top {
-      position: absolute;
-      top: 0;
-      left: 50%;
-      transform: translate(-42%, -70%);
-      width: 120%;
-      animation: cloud-move-top 25s linear infinite;
-      pointer-events: none;
-      img {
-        width: 100%;
-        height: 100%;
+  }
+  @media (max-width: 768px) {
+    .plane {
+      &__top {
+        display: none;
       }
-      @keyframes cloud-move-top {
-        0% {
-          transform: translate(-42%, -70%);
-        }
-        50% {
-          transform: translate(-58%, -70%);
-        }
-        100% {
-          transform: translate(-42%, -70%);
-        }
-      }
-    }
-    .cloud-bot {
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translate(-42%, 40%);
-      width: 120%;
-      animation: cloud-move-bot 25s linear infinite;
-      pointer-events: none;
-      img {
-        width: 100%;
-        height: 100%;
-      }
-      @keyframes cloud-move-bot {
-        0% {
-          transform: translate(-42%, 40%);
-        }
-        50% {
-          transform: translate(-58%, 40%);
-        }
-        100% {
-          transform: translate(-42%, 40%);
-        }
+      &__card {
+        flex-direction: column;
+        padding: 0 30px;
       }
     }
   }
