--- a/src/scss/pages/animal/transport-animal.scss
+++ b/src/scss/pages/animal/transport-animal.scss
@@ -89,6 +89,9 @@
   }
   @media (max-width: 600px) {
     .transport-animal {
+      &__heading {
+        font-size: 16px;
+      }
       &__img {
         max-width: 100%;
         img {
