--- a/src/scss/pages/resume/resume.scss
+++ b/src/scss/pages/resume/resume.scss
@@ -105,6 +105,9 @@
         flex-direction: column;
         label {
           padding-left: 30px;
+          padding-right: 30px;
+          margin: 0 auto;
+          line-height: normal;
           text-align: center;
         }
         input,
