--- a/src/scss/sections/comfort.scss
+++ b/src/scss/sections/comfort.scss
@@ -65,6 +65,14 @@
         }
       }
     }
+    &__cloud {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
   }
   @media (max-width: 1279px) {
     .comfort {
